syntax = "proto3";

package gandelm.github_webhook.v1;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// GitHub Webhook の RPC 定義
service GitHubWebhookService {
  rpc HandleWebhook(GitHubWebhookRequest) returns (google.protobuf.Empty);
}

// GitHub Webhook のリクエスト
message GitHubWebhookRequest {
  string event_type = 1;  // "workflow_run", "push" などのイベント名
  string delivery_id = 2; // GitHub が発行するリクエストの一意 ID
  oneof payload {         // どのペイロードかを動的に判定
    WorkflowRunEvent workflow_run = 3;
    PushEvent push = 4;
  }
}

// workflow_run のペイロード
message WorkflowRunEvent {
  string action = 1;     // "completed", "in_progress" など
  string status = 2;     // "completed", "in_progress"
  string conclusion = 3; // "success", "failure"
}

// push のペイロード
message PushEvent {
  string ref = 1; // "refs/heads/main"
  string before = 2;
  string after = 3;
}
